--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,8 +3,8 @@
         <div class="container-fluid">
           <a class="navbar-brand">Menu MaQ'R</a>
           <form class="d-flex">
-            <input class="form-control me-2" type="text" placeholder="Username" aria-label="Username">
-            <input class="form-control me-2" type="password" placeholder="Password" aria-label="Password">
+            <input id="username" class="form-control me-2" type="text" placeholder="Username" aria-label="Username">
+            <input id="password" class="form-control me-2" type="password" placeholder="Password" aria-label="Password">
             <button class="btn btn-outline-secondary" type="submit">Log In</button>
           </form>
         </div>
