--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -9,6 +9,66 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 </head>
 <body>
+    <!--Navigation-->
+    <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand">Menu MaQ'R</a>
+          </form>
+        </div>
+    </nav>
+
+    <div class="container">
+        <div class="row">
+
+            <!--Menu Created Dashboard-->
+            <div class="col-md-9">
+                <div class="card">
+  			        <div class="card-body">
+    			        <h2>Created Menus</h2>
+                        <!-- Have handlebars for created menus so they're listed here -->
+                        <!-- IMPORTANT **** Update VARIABLES HERE in Handlebars-->
+                        {{#each menus}}
+                            <div class ="row">
+                                <div class="col-md-12">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <h3>{{menuName}}</h3>
+                                            <button class="btn btn-outline-secondary" type="submit">Edit Menu</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        {{/each}}
+  		            </div>
+		        </div>    
+            </div>
+
+
+            <!-- QR Codes Dashbaord -->
+            <div class="col-md-3">
+                <div class="card">
+  			        <div class="card-body">
+    			        <h2>QR Codes</h2>
+                        <!-- Have handlebars for created QR's so they're listed here -->
+                        <!-- IMPORTANT **** Update VARIABLES HERE in Handlebars-->
+                        {{#each qrCodes}}
+                            <div class ="row">
+                                <div class="col-md-12">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <h3>{{qrCode}}</h3>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        {{/each}}
+  		            </div>
+		        </div>
+            </div>
+
+
+        </div>
+    </div>
     
 </body>
 </html>
