small changes to handlebars

--- a/views/menu.handlebars
+++ b/views/menu.handlebars
@@ -1,75 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu MaQ'R</title>
-    <!-- Bootstrap Stylesheet -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-</head>
-<body>
-    <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu MaQ'R</title>
-    <!-- Bootstrap Stylesheet -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link rel='stylesheeet' href='/css/styles.css'>
-</head>
-<body>
-        <!-- Navigation -->
-        <!-- Nav bar will needed to be updated -->
-        <nav class="navbar navbar-light bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand">Menu MaQ'R</a>
-              <form class="d-flex">
-                <input class="form-control me-2" type="text" placeholder="Username" aria-label="Username">
-                <input class="form-control me-2" type="password" placeholder="Password" aria-label="Password">
-                <button class="btn btn-outline-secondary" type="submit">Log In</button>
-              </form>
-            </div>
-        </nav>
-
-        <div class='container'>
-            <div class='row'>
-                <div class='col-md-4'>
-                    <!-- placeholder items still need to be updated -->
-                    <h3 class='added-items'>Added Items</h3>
-                    <div class="card" style="width: 18rem;">
-                        <div class="card-header">
-                          My Items
-                        </div>
-                        <ul class="list-group list-group-flush">
-                          <li class="list-group-item">placeholder 1</li>
-                          <li class="list-group-item">placeholder 2</li>
-                          <li class="list-group-item">placeholder 3</li>
-                        </ul>
-                      </div>
+<div class='container'>
+    <div class='row'>
+        <div class='col-md-4'>
+            <!-- placeholder items still need to be updated -->
+            <h3 class='added-items'>Added Items</h3>
+            <div class="card" style="width: 18rem;">
+                <div class="card-header">
+                    My Items
                 </div>
-                <div class='col-md-8'>
-                    <!-- placeholder information, ids, etc. still need to be updated-->
-                    <h3>Edit Item:</h3>
-                    <div class="mb-3">
-                        <label for="exampleFormControlInput1" class="form-label">Section Name:</label>
-                        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Breakfast, Lunch, Dinner, etc.">
-                    </div>
-                    <div class="mb-3">
-                        <label for="exampleFormControlInput1" class="form-label">Dish name:</label>
-                        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Huevos Rancheros, Mom's Spaghetti, etc.">
-                    </div>
-                    <div class="mb-3">
-                        <label for="exampleFormControlTextarea1" class="form-label">Dish Description:</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"></textarea>
-                    </div>
-                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">placeholder 1</li>
+                    <li class="list-group-item">placeholder 2</li>
+                    <li class="list-group-item">placeholder 3</li>
+                </ul>
             </div>
         </div>
-
-</body>
-</html>
-</body>
-</html>
+        <div class='col-md-8'>
+            <!-- placeholder information, ids, etc. still need to be updated-->
+            <h3>Edit Item:</h3>
+            <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label">Section Name:</label>
+                <input type="text" class="form-control" id="exampleFormControlInput1"
+                    placeholder="Breakfast, Lunch, Dinner, etc.">
+            </div>
+            <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label">Dish name:</label>
+                <input type="text" class="form-control" id="exampleFormControlInput1"
+                    placeholder="Huevos Rancheros, Mom's Spaghetti, etc.">
+            </div>
+            <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label">Dish Description:</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"></textarea>
+            </div>
+        </div>
+    </div>
+</div>
