--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -7,11 +7,11 @@
   			    <div class="card-body">
     			    <h2>Sign Up</h2>
                     
-                    <form>
+                    <form id="signup-form">
 
                         <div class="mb-3">
                             <label for="email" class="form-label">Email address</label>
-                            <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+                            <input class="form-control" id="newEmail" aria-describedby="emailHelp">
                         </div>
 
                         <div class="mb-3">
@@ -38,3 +38,5 @@
         
     </div>
 </div>
+
+<script src="js/signup.js"></script>
