--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -29,7 +29,7 @@
                             <input type="text" class="form-control" id="lastName" aria-describedby="emailHelp">
                         </div>
 
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-dark">Submit</button>
                     </form>
                 </div>
             </div>
