--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,7 @@
                 <input id="email" class="form-control me-2" type="text" placeholder="Username" aria-label="Username">
                 <input id="password" class="form-control me-2" type="password" placeholder="Password"
                     aria-label="Password">
-                <button class="btn btn-outline-secondary" type="submit">Log In</button>
+                <button class="btn btn-outline-secondary loginButton" type="submit">Log In</button>
             </form>
         </div>
     </nav>
