--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -30,13 +30,12 @@ body {
 
 .edit-item {
     padding-top: 25px;
-
-.menu-items{
+}
+.menu-items {
     color: #0D0D0D;
 }
 
-#chef-photo {
+#chefphoto {
     padding-top: 20px;
     width: 100%;
-    opacity: 80%;
 }
